--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Kotlin coroutines vs Rx</string>
+    <string name="load_data_coroutines">Load data - Coroutines</string>
+    <string name="load_data_rx">Load data - Rx</string>
 </resources>
